--- a/styles/style.css
+++ b/styles/style.css
@@ -5,12 +5,18 @@
 
 body,html{
   width: 100%;
+  background-color: #2f2e60;
 }
 
 img{
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+@font-face {
+  font-family: genshin;
+  src: url(../fonts/zh-cn.ttf);
 }
 
 .back{
@@ -30,6 +36,8 @@ img{
   flex-flow: row wrap;
   justify-content: center;
   justify-self: center;
+
+  position: fixed;
 
   width: 100%;
   height: 15vh;
@@ -58,4 +66,38 @@ img{
   
   width: 10%;
   height: 5vh;
+}
+
+.news{
+  display: flex;
+  justify-self: center;
+  flex-flow: row wrap;
+
+  width: 100%;
+  height: 100vh;
+  margin-top: 30%;
+  background-color: #2f2e60;
+}.news h1{
+  width: 100%;
+
+  text-align: center;
+  font-weight: 100;
+  font-family: genshin;
+  font-size: 8vh;
+}
+
+.newspaper{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  justify-self: center;
+
+  background-color: #2f2e60;
+  width: 50%;
+  height: 50vh;
+}.newspaper p{
+  text-align: center;
+  font-weight: 100;
+  font-family: genshin;
+  font-size: 4vh;
 }
