--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 body,html{
   width: 100%;
   background-color: #2f2e60;
+  align-items: center;
 }
 
 img{
@@ -37,7 +38,7 @@ img{
   justify-content: center;
   justify-self: center;
 
-  position: fixed;
+  position: relative;
 
   width: 100%;
   height: 15vh;
@@ -73,10 +74,11 @@ img{
   justify-self: center;
   flex-flow: row wrap;
 
-  width: 100%;
+  width: 80%;
   height: 100vh;
   margin-top: 30%;
   background-color: #2f2e60;
+  align-self: center;
 }.news h1{
   width: 100%;
 
