--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 
 body,html{
   width: 100%;
-  background-color: #2f2e60;
+  background-color: seagreen;
   align-items: center;
 }
 
@@ -96,7 +96,7 @@ img{
 
   background-color: #2f2e60;
   width: 50%;
-  height: 50vh;
+  height: 60vh;
 }.newspaper p{
   text-align: center;
   font-weight: 100;
