--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,9 @@
 body,html{
   width: 100%;
   background-color: seagreen;
+  background-image: url(../img/4.5event.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
   align-items: center;
 }
 
@@ -30,6 +33,7 @@ img{
   background-image: url(../img/banner.webp);
   background-size: cover;
   background-repeat: no-repeat;
+  /* background-image: url(../img/4.5event.webp); */
 }
 
 .footer{
@@ -43,7 +47,15 @@ img{
   width: 100%;
   height: 15vh;
   margin-top: 1%;
+}.footer a{
+  text-align: center;
+  text-decoration: none;
+  color: transparent;
+}.footer a:hover{
+  color: #CCCCCC;
+  cursor: pointer;
 }
+
 
 .login{
   display: flex;
@@ -69,37 +81,79 @@ img{
   height: 5vh;
 }
 
+.click{
+  padding:16px;
+  background-color: #ccc;
+  text-decoration:none;
+  border-radius:10px;
+  font-size: 18px;
+  color:#fff;
+  &:hover{
+    transition:0.3s;
+    background-color: #222;
+  }
+} 
+.menu{
+  position:absolute;
+  top:380px;
+  left:480px;
+  background-color: #71ff05;
+  border-radius:4px;
+  display: none;
+  
+.item{
+   padding:36px;
+   text-align:center;
+   border-bottom:1px solid #222;
+   &:hover{
+     background-color: #489b09;
+   }
+  }
+}
+
 .news{
   display: flex;
   justify-self: center;
   flex-flow: row wrap;
+  justify-content: space-around;
+  align-self: center;
 
   width: 80%;
   height: 100vh;
   margin-top: 30%;
   background-color: #2f2e60;
-  align-self: center;
 }.news h1{
   width: 100%;
-
+  
   text-align: center;
   font-weight: 100;
   font-family: genshin;
-  font-size: 8vh;
+  font-size: 8ch;
+  color: #CCCCCC;
 }
 
 .newspaper{
   display: flex;
   flex-flow: row wrap;
+  text-align: center;
+  align-items: center;
   justify-content: center;
   justify-self: center;
 
-  background-color: #2f2e60;
-  width: 50%;
-  height: 60vh;
+  background-color: transparent;
+  width: 45%;
+  height: fit-content;
 }.newspaper p{
   text-align: center;
+  align-items: center;
+
   font-weight: 100;
   font-family: genshin;
   font-size: 4vh;
+  
+  background-color: transparent;
+  color: white;
+  margin-bottom: 10%;
+}.newspaper div{
+  height: 60vh;
 }
