--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,6 @@
 body,html{
   width: 100%;
   background-color: seagreen;
-  background-image: url(../img/4.5event.webp);
-  background-repeat: no-repeat;
   background-size: cover;
   align-items: center;
 }
@@ -28,11 +26,24 @@ img{
   flex-direction: column;
 
   width: 100%;
-  height: 100vh;
+  height: 150vh;
   background-color: #2f2e60;
   background-image: url(../img/banner.webp);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* background-image: url(../img/4.5event.webp); */
+}
+.bg2{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 150vh;
+  background-color: #2f2e60;
+  background-image: url(../img/4.5event.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   /* background-image: url(../img/4.5event.webp); */
 }
 
